--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li>Graphical Analysis</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://stockscanner.streamlit.app/" target="_blank" class="btn-buy">Check Out</a>
+                <a href="https://deeplearningstock.streamlit.app/" target="_blank" class="btn-buy">Check Out</a>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
                 <li>Real-time graphics</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://sentistock.streamlit.app/" target="_blank" class="btn-buy">Check Out</a>
+                <a href="https://stocksentiment.streamlit.app/" target="_blank" class="btn-buy">Check Out</a>
               </div>
             </div>
           </div>
